--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-bootstrap4==3.0.1
 django-cleanup==5.2.0
 django-forms-bootstrap==3.1.0
 django-heroku==0.3.1
+gunicorn==20.1.0
 importlib-metadata==2.1.1
 psycopg2==2.9.1
 pytz==2021.1
